--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
         <!-- Start content-eight -->
         <div class="content-eight">
             <div class="content">
-                <h1>Do you like this awesome WordPress theme?</h1>
-                <button><a href="">Download now</a></button>
+                <h1>Can you like, share and subscribe for my friend's channel ?</h1>
+                <button><a href="https://www.youtube.com/channel/UCRCQOU54e5iBi1vi-NuzCrw">Liu Min</a></button>
             </div>
         </div>
         <!-- End content-eight -->
